--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
     <div class="container">
-        <h1>RUDRANGSH STEALS <br>YOUR INFORMATION</h1>
+        <h1>RUDRANGSH STEALS YOUR INFORMATION</h1>
 
     </style>
         <div class="info" id="ip"></div>
